--- a/src/App.css
+++ b/src/App.css
@@ -8,9 +8,7 @@
 }
 
 .content {
-	flex-grow: 1;
-	overflow-y: auto;
-	padding-bottom: 80px;
+	overflow: auto;
 }
 
 .question,
@@ -25,7 +23,6 @@
 	display: flex;
 	gap: 10px;
 	position: sticky;
-	bottom: 20px;
 	background: white;
 	padding: 10px;
 	border-top: 1px solid #ddd;
