--- a/src/App.css
+++ b/src/App.css
@@ -13,10 +13,20 @@
 
 .question,
 .answer {
-	background: #f4f4f4;
 	padding: 20px;
 	border-radius: 8px;
 	margin-bottom: 10px;
+}
+
+.question {
+	background: #9d9595;
+	color: #f4f4f4;
+	font-size: 24px;
+	font-weight: bold;
+}
+
+.answer {
+	background: #f4f4f4;
 }
 
 .input-form {
